monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A0278/A0278b.mc4
/* (c) https://github.com/MontiCore/monticore */
package  de.monticore.grammar.cocos.invalid.A0278;

grammar A0278b extends de.monticore.grammar.cocos.invalid.A0278.A0278a{

B = A;

}
